helm/vitess/ems-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ems-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.global-static-ip-name: ems-prod-rest-static-ip
spec:
  rules:
  - http:
      paths:
      - path: /*
        backend:
          serviceName: ems-web
          servicePort: 80
      - path: /api/*
        backend:
          serviceName: ems-rest
          servicePort: 80
